--- a/extras/templates/extras/children/new_order.html
+++ b/extras/templates/extras/children/new_order.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-12 col-md-6">
+  <div class="col">
     <h2>Children's Day Tickets</h2>
   </div>
 </div>
 <div class="row">
-  <div class="col-12 col-md-6">
+  <div class="col">
     {% if not request.user.is_authenticated %}
     <p>Please <a href="{% url 'register' %}?next={{ request.path }}">sign up</a> or <a href="{% url 'login' %}?next={{ request.path }}">sign in</a> to buy a ticket.</p>
     {% endif %}
