Add order lines to email and an assert

--- a/extras/templates/extras/children/_ticket_info.html
+++ b/extras/templates/extras/children/_ticket_info.html
@@ -1,2 +1,2 @@
-<p>Blurb here</p>
+<p>Please note that only one ticket can be purchased at a time, but multiple orders can be placed.</p>
 <p>All prices include VAT at 20%.</p>
