--- a/tickets/templates/tickets/new_free_ticket.html
+++ b/tickets/templates/tickets/new_free_ticket.html
@@ -12,7 +12,7 @@
     <form method="post" id="order-form">
       {% csrf_token %}
       <div class="card bg-danger text-dark">
-        <div class="card-header"><h2>About your order</h2></div>
+        <div class="card-header"><h2>Free ticket details</h2></div>
         <div class="card-body">
           <div class="row">
             <div class="col-12 col-md-4">
