--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -65,6 +65,27 @@
                   <small class="form-text text-muted">You may choose to display your Twitter username on your badge. This will be prefixed with @. Optional.</small>
                 </div>
               </div>
+              <div class="row">
+                <div class="col">
+                  <h3>Select Snake</h3>
+                  <img src="/static/accounts/snakes/bodies/red.svg" class="snake-body" data-id="red" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/bodies/blue.svg" class="snake-body" data-id="blue" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/bodies/yellow.svg" class="snake-body" data-id="yellow" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/bodies/green.svg" class="snake-body" data-id="green" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/bodies/purple.svg" class="snake-body" data-id="purple" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/bodies/grey.svg" class="snake-body" data-id="grey" width="75px" height="75px"/>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h3>Select Extras</h3>
+                  <img src="/static/accounts/snakes/deerstalker.svg" class="snake-extras" data-id="deerstalker" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/glasses.svg" class="snake-extras" data-id="glasses" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/dragon.svg" class="snake-extras" data-id="dragon" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/bowie.svg" class="snake-extras" data-id="bowie" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/mortar.svg" class="snake-extras" data-id="mortar" width="75px" height="75px"/>
+                </div>
+              </div>
             </div>
             <div class="col-4">
               <h3>Badge Preview</h3>
