Astronaut, Orange and a revised purple

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -72,6 +72,7 @@
                   <img src="/static/accounts/snakes/bodies/blue.svg" class="snake-body" data-id="blue" width="75px" height="75px"/>
                   <img src="/static/accounts/snakes/bodies/yellow.svg" class="snake-body" data-id="yellow" width="75px" height="75px"/>
                   <img src="/static/accounts/snakes/bodies/green.svg" class="snake-body" data-id="green" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/bodies/orange.svg" class="snake-body" data-id="orange" width="75px" height="75px" />
                   <img src="/static/accounts/snakes/bodies/purple.svg" class="snake-body" data-id="purple" width="75px" height="75px"/>
                   <img src="/static/accounts/snakes/bodies/grey.svg" class="snake-body" data-id="grey" width="75px" height="75px"/>
                 </div>
@@ -84,6 +85,7 @@
                   <img src="/static/accounts/snakes/dragon.svg" class="snake-extras" data-id="dragon" width="75px" height="75px"/>
                   <img src="/static/accounts/snakes/bowie.svg" class="snake-extras" data-id="bowie" width="75px" height="75px"/>
                   <img src="/static/accounts/snakes/mortar.svg" class="snake-extras" data-id="mortar" width="75px" height="75px"/>
+                  <img src="/static/accounts/snakes/astronaut.svg" class="snake-extras" data-id="astronaut" width="75px" height="75px" />
                 </div>
               </div>
             </div>
