--- a/ironcage/static/ironcage/ironcage.css
+++ b/ironcage/static/ironcage/ironcage.css
@@ -31,3 +31,14 @@ div.is-invalid > .invalid-feedback {
 #price-table tr td:first-child {
     width: 25%;
 }
+
+.snake-option {
+  cursor: pointer;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin-bottom: 4px;
+}
+
+.snake-option.selected {
+  border: 3px solid red;
+}
