--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -260,7 +260,7 @@ var isOrganiser = "{{ is_organiser|safe }}" == "True";
 var name = "{{ request.user.name|safe }}";
 var snake = "{{ request.user.badge_snake_colour|safe }}";
 var extras = "{{ request.user.badge_snake_extras|safe }}";
-var company = "{{ request.user.badge_company|safe }}";
+var company = "{% if request.user.badge_company %}{{ request.user.badge_company|safe }}{% endif %}";
 var twitter = "{{ request.user.badge_twitter|safe }}";
 var pronoun = "{{ request.user.badge_pronoun|safe }}";
 var ticketRate = "{{ ticket_rate|safe }}";
