A bit of a messy first stab at scheduling

--- a/ironcage/static/ironcage/ironcage.css
+++ b/ironcage/static/ironcage/ironcage.css
@@ -42,3 +42,7 @@ div.is-invalid > .invalid-feedback {
 .snake-option.selected {
   border: 3px solid red;
 }
+
+.schedule-table td {
+  border: 1px solid grey;
+}
