Update snakes and have a name length thing

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -63,7 +63,7 @@
                   <img src="/static/accounts/snakes/bowie.svg" class="snake-extras snake-option" data-id="bowie" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/mortar.svg" class="snake-extras snake-option" data-id="mortar" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/astronaut.svg" class="snake-extras snake-option" data-id="astronaut" width="65px" height="65px" />
-                  <!-- <img src="/static/accounts/snakes/monarch.svg" class="snake-extras snake-option" data-id="monarch" width="65px" height="65px" /> -->
+                  <!-- <img src="/static/accounts/snakes/xray.svg" class="snake-extras snake-option" data-id="xray" width="65px" height="65px" /> -->
                   {% bootstrap_field form.badge_snake_extras %}
                 </div>
               </div>
