Remove corporate snake restriction

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-8">
                   {% bootstrap_field form.badge_company layout='inline' %}
-                  <small class="form-text text-muted">The company or organisation you are representing. Optional for non-corporate tickets.</small>
+                  <small class="form-text text-muted">The company or organisation you are representing. Optional.</small>
                 </div>
               </div>
               <hr>
