--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -63,6 +63,8 @@
                   <img src="/static/accounts/snakes/bowie.svg" class="snake-extras snake-option" data-id="bowie" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/mortar.svg" class="snake-extras snake-option" data-id="mortar" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/astronaut.svg" class="snake-extras snake-option" data-id="astronaut" width="65px" height="65px" />
+                  <img src="/static/accounts/snakes/bow.svg" class="snake-extras snake-option" data-id="bow" width="65px" height="65px" />
+                  <img src="/static/accounts/snakes/unicorn.svg" class="snake-extras snake-option" data-id="unicorn" width="65px" height="65px" />
                   <!-- <img src="/static/accounts/snakes/xray.svg" class="snake-extras snake-option" data-id="xray" width="65px" height="65px" /> -->
                   {% bootstrap_field form.badge_snake_extras %}
                 </div>
