Add finaid report

--- a/reports/templates/reports/index.html
+++ b/reports/templates/reports/index.html
@@ -23,5 +23,6 @@
 
 <ul>
 	<li><a href="{% url 'cfp:schedule_csv' %}">Get Scheduler Proposals CSV</a></li>
+	<li><a href="{% url 'reports:finaid_report' %}">FinAid Report</a></li>
 </ul>
 {% endblock %}
