Replace Bowie with Crown

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -60,7 +60,7 @@
                   <img src="/static/accounts/snakes/deerstalker.svg" class="snake-extras snake-option" data-id="deerstalker" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/glasses.svg" class="snake-extras snake-option" data-id="glasses" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/dragon.svg" class="snake-extras snake-option" data-id="dragon" width="65px" height="65px"/>
-                  <img src="/static/accounts/snakes/bowie.svg" class="snake-extras snake-option" data-id="bowie" width="65px" height="65px"/>
+                  <img src="/static/accounts/snakes/crown.svg" class="snake-extras snake-option" data-id="crown" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/mortar.svg" class="snake-extras snake-option" data-id="mortar" width="65px" height="65px"/>
                   <img src="/static/accounts/snakes/astronaut.svg" class="snake-extras snake-option" data-id="astronaut" width="65px" height="65px" />
                   <img src="/static/accounts/snakes/bow.svg" class="snake-extras snake-option" data-id="bow" width="65px" height="65px" />
