--- a/schedule/templates/schedule/schedule.html
+++ b/schedule/templates/schedule/schedule.html
@@ -7,7 +7,6 @@
   <div class="row">
     <div class="col">
       <h1>{{ day }}</h1>
-
       <table class="table table-striped table-sm table-responsive schedule-table" style="font-size: 0.75em;">
         <thead>
           <tr>
@@ -26,9 +25,11 @@
                     <td style="background-color: #333; color: white;">{{ session.stream.room.name }} {{time|time:"H:i"}}</td>
                   {% elif session.long_session %}
                   {% else %}
-                    <td>
+                    <td {% if session.activity.break_event %}class="break"{% endif %}>
                       <p>{{ session.activity.title }}</p>
+                      {% if not session.activity.conference_event %}
                       <p><small>{{ session.activity.proposer.name }}</small></p>
+                      {% endif %}
                     </td>
                   {% endif %}
               {% endfor %}
