--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -67,7 +67,7 @@
     </div>
 
     <main>
-      <div class="container">
+      <div class="container{% if wide %}-fluid{% endif %}">
         <div class="row">
           <div class="col-md-12">
             {% for message in messages %}
