--- a/schedule/templates/schedule/schedule.html
+++ b/schedule/templates/schedule/schedule.html
@@ -6,30 +6,31 @@
 {% for day, days_sessions in sessions.items %}
   <div class="row">
     <div class="col">
-      <h1>{{ day }}</h1>
-      <table class="table table-striped table-sm table-responsive schedule-table" style="font-size: 0.75em;">
+      <h1>{{ day|date:"l dS" }}</h1>
+      <table class="table table-striped schedule-table">
         <thead>
           <tr>
-            <th scope="col"></th>
+            <th scope="col" style="width: 5%"></th>
             {% for stream in days_sessions.streams %}
-              <th scope="col">{{ stream.room.name }}</th>
+              <th scope="col" style="width: {{ days_sessions.streams|width }}%">{{ stream.room.name }}</th>
             {% endfor %}
           </tr>
         </thead>
         <tbody>
           {% for time in days_sessions.times %}
             <tr>
-              <th scope="row">{{ time|time:"H:i" }}</th>
+              <th scope="row"><div class="collapsed-table">{{ day|date:"l" }} {{ time|time:"H:i" }}</div><div class="time">{{ time|time:"H:i" }}</div></th>
               {% for session in days_sessions.matrix|index:forloop.counter0 %}
                   {% if session is None %}
-                    <td style="background-color: #333; color: white;"></td>
+                    <td class='no-session'></td>
                   {% elif session.spanned %}
                   {% else %}
                     <td {% if session.break_event %}class="break"{% endif %} colspan="{{ session.colspan }}" rowspan="{{ session.rowspan }}">
                       <p>{{ session.title }}</p>
                       {% if not session.conference_event %}
-                      <p><small>{{ session.name }}</small></p>
+                      <p class="presenter-name">{{ session.name }}</small></p>
                       {% endif %}
+                      <div class="collapsed-table">{% if not session.break_event %}<span class="room">{{ session.room }}</span>{% endif %}<span class="end-time">{% if session.rowspan > 1 %} Ends: {{ session.end_time|time:"H:i" }}{% endif %}</span></div>
                     </td>
                   {% endif %}
               {% endfor %}
