Update T&C and privacy policy

--- a/accounts/templates/registration/_terms_and_conditions.html
+++ b/accounts/templates/registration/_terms_and_conditions.html
@@ -11,4 +11,13 @@
     <li>
         <strong>Communication</strong> We will contact you by email to give you information about the conference and to ask for feedback after the event.
     </li>
+    <li>
+        <strong>Age of attendees</strong> We welcome children under the age of 16 as conference delegates, but they must be accompanied at all times by a responsible adult over the age of 18. We provide free creche facilities for parents who do not wish to register their children as delegates.
+    </li>
+    <li>
+        <strong>Consent for account</strong> By accepting these terms and conditions, you confirm that you are aged over 16 years of age. If a ticket has been purchased for someone under 16 years of age, please contact pyconuk@uk.python.org for assistance in claiming the ticket.
+    </li>
+    <li>
+        <strong>Children’s Day</strong> By purchasing a ticket for children’s day, you confirm that you have consent from the parent or guardian of the registered child to allow them to attend the event.
+    </li>
 </ul>
