--- a/accounts/templates/registration/_privacy_policy.html
+++ b/accounts/templates/registration/_privacy_policy.html
@@ -67,7 +67,7 @@
 <p>
     You may choose to restrict the collection or use of your personal information in the following ways:
     <ul>
-        <li>if you have previously agreed to us using your personal information for direct marketing purposes, you may change your mind at any time by writing to or emailing us at pyconuk-committee@uk.python.org</li>
+        <li>if you have previously agreed to us using your personal information for direct marketing purposes, you may change your mind at any time by writing to or emailing us at pyconuk@uk.python.org</li>
     </ul>
 </p>
 
@@ -76,7 +76,7 @@
 </p>
 
 <p>
-    You may request details of personal information which we hold about you under the Data Protection Act 1998. If you would like a copy of the information held on you please write to pyconuk-committee@uk.python.org.
+    You may request details of personal information which we hold about you under the Data Protection Act 1998. If you would like a copy of the information held on you please write to pyconuk@uk.python.org.
 </p>
 
 <p>
