--- a/ironcage/templates/ironcage/index.html
+++ b/ironcage/templates/ironcage/index.html
@@ -22,24 +22,25 @@
           <a href="{% url 'tickets:ticket' ticket.ticket_id %}">View your conference ticket</a>
           <hr>
           <a href="{% url 'accounts:profile' %}">Update your profile</a>
-          <hr>
         {% endif %}
 
         {% if orders|length == 0 %}
           {% if ticket_sales_open %}
-            <hr>
             <a href="{% url 'tickets:new_order' %}">Order conference tickets</a>
             <hr>
             <a href="{% url 'tickets:new_educator_order' %}">Order education summit tickets</a>
-            <hr>
           {% endif %}
         {% elif orders|length == 1 %}
+          {% if ticket %}
+            <hr>
+          {% endif %}
           <a href="{% url 'orders:order' orders.0.order_id %}">View your order</a>
           {% if ticket_sales_open %}
             <hr>
             <a href="{% url 'tickets:new_order' %}">Order more conference tickets</a>
           {% endif %}
         {% else %}
+          <hr>
           View your orders:
           <ul>
             {% for order in orders %}
