Turns out it’s called Young Coders' day

--- a/accounts/templates/registration/_privacy_policy.html
+++ b/accounts/templates/registration/_privacy_policy.html
@@ -16,7 +16,7 @@
         <li>contact information including email address and billing address</li>
         <li>demographic information such as gender and nationality</li>
         <li>requirements for childcare, assistance or dietary needs</li>
-        <li>the first names, assistance and dietary needs of any children you are registering for children’s day</li>
+        <li>the first names, assistance and dietary needs of any children you are registering for Young Coders' day</li>
         <li>billing details</li>
 
     </ul>
