--- a/accounts/templates/registration/_terms_and_conditions.html
+++ b/accounts/templates/registration/_terms_and_conditions.html
@@ -18,6 +18,6 @@
         <strong>Consent for account</strong> By accepting these terms and conditions, you confirm that you are aged over 16 years of age. If a ticket has been purchased for someone under 16 years of age, please contact pyconuk@uk.python.org for assistance in claiming the ticket.
     </li>
     <li>
-        <strong>Children’s Day</strong> By purchasing a ticket for children’s day, you confirm that you have consent from the parent or guardian of the registered child to allow them to attend the event.
+        <strong>Young Coders' Day</strong> By purchasing a ticket for Young Coders' day, you confirm that you have consent from the parent or guardian of the registered child to allow them to attend the event.
     </li>
 </ul>
