--- a/extras/templates/extras/children/new_order.html
+++ b/extras/templates/extras/children/new_order.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
   <div class="col">
-    <h2>Children's Day Tickets</h2>
+    <h2>Young Coders' Day Tickets</h2>
   </div>
 </div>
 <div class="row">
