--- a/extras/templates/extras/children/ticket.html
+++ b/extras/templates/extras/children/ticket.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% for ticket in tickets %}
-    <h1>Children's Day Ticket ({{ ticket.item_id }})</h1>
+    <h1>Young Coders' Day Ticket ({{ ticket.item_id }})</h1>
 
     <div class="row">
       <div class="col-md-6">
