Privacy Policy wording update

--- a/accounts/templates/registration/_privacy_policy.html
+++ b/accounts/templates/registration/_privacy_policy.html
@@ -5,7 +5,7 @@
     PyCon UK Society Limited is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this website, then you can be assured that it will only be used in accordance with this privacy statement.
 </p>
 <p>
-    PyCon UK Society Limited may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. This policy is effective from 4th August 2018.
+    PyCon UK Society Limited may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. This policy is effective from 11th August 2018.
 </p>
 
 <h3>What we collect</h3>
@@ -28,7 +28,7 @@
     <ul>
         <li>Ensuring that we provide an inclusive conference</li>
         <li>So that we can monitor demographic trends in conference attendance.  We may also take this information into account when selecting the conference programme.</li>
-        <li>We will contact you by email to give you information about the conference and to ask for feedback after the event.</li>
+        <li>We will contact you by email to give you information about the conference, to let you know when we organise the next PyCon UK and to ask for feedback after the event.</li>
         <li>We will tell you about other events we run if you give us permission.</li>
         <li>We will retain information about your attendance at the conference (including call for proposal submissions and financial assistance applications) for three years.  This is to allow us to ensure that we have a broad range of speakers over time, and that financial assistance is distributed fairly.</li>
         <li>The details of children registered for children’s day are used to produce badges, confirm attendance and ensure that we are able to provide an event which is accessible and meets any special dietary needs.</li>
