--- a/accounts/templates/registration/_terms_and_conditions.html
+++ b/accounts/templates/registration/_terms_and_conditions.html
@@ -9,7 +9,7 @@
         <strong>Refunds</strong> We can refund your tickets in full up to a week before the conference.  Please contact the committee, quoting your order number, to arrange a refund.
     </li>
     <li>
-        <strong>Communication</strong> We will contact you by email to give you information about the conference and to ask for feedback after the event.
+        <strong>Communication</strong> We will contact you by email to give you information about the conference, to let you know when we organise the next PyCon UK and to ask for feedback after the event.
     </li>
     <li>
         <strong>Age of attendees</strong> We welcome children under the age of 16 as conference delegates, but they must be accompanied at all times by a responsible adult over the age of 18. We provide free creche facilities for parents who do not wish to register their children as delegates.
