--- a/schedule/templates/schedule/schedule.html
+++ b/schedule/templates/schedule/schedule.html
@@ -2,10 +2,42 @@
 {% load schedule_extras %}
 
 {% block content %}
+<div class="row justify-content-center">
+  <div class="col-8">
+    <div class="card bg-danger text-dark">
+      <div class="card-header">
+        <h2>Schedule via iCal</h2>
+      </div>
+      <div class="card-body">
+        <p>You can get our full or your personalised schedule in iCal format to import into your favourite calendar app.</p>
+        <p>To personalise - just click on items you wish to attend and they will be highlighted. They will then appear in the personalised iCal link.</p>
+        <p>You can use these URLs to subscribe to the calendars and it will automatically update when the schedule changes.</p>
+        <ul>
+          <li>
+            <a href="webcal://{{ request.get_host }}{% url 'schedule:ical' token=request.user.ical_token %}"><strong>Personalised Schedule</strong></a>
+          </li>
+          <li>
+            <a href="webcal://{{ request.get_host }}{% url 'schedule:ical' token='full' %}"><strong>Full Schedule</strong></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <p>
+      <strong>Jump to day:</strong>
+      <a href="#sat">Saturday 15th</a> &bull;
+      <a href="#sun">Sunday 16th</a> &bull;
+      <a href="#mon">Monday 17th</a> &bull;
+      <a href="#tue">Tuesday 18th</a> &bull;
+      <a href="#wed">Wednesday 19th</a>
+    </p>
+  </div>
+</div>
+<hr>
+
 {% for day, days_sessions in sessions.items %}
   <div class="row">
     <div class="col">
-      <h1>{{ day|date:"l dS" }}</h1>
+      <h1 id="{{ day|date:"D"|lower }}">{{ day|date:"l dS" }}</h1>
       <table class="table table-striped schedule-table">
         <thead>
           <tr>
