--- a/schedule/templates/schedule/schedule.html
+++ b/schedule/templates/schedule/schedule.html
@@ -4,6 +4,18 @@
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-8">
+    <div class="card bg-warning text-dark">
+      <div class="card-header">
+        <h2>Subject to change</h2>
+      </div>
+      <div class="card-body">
+        <p>Our schedule is subject to change, however things should only move within the same day.</p>
+        <p>
+          You can help us by clicking on the items you wish to see, which will highlight them in yellow.<br>
+          This will allow us to gauge which talk needs which size room.
+        </p>
+      </div>
+    </div>
     <div class="card bg-danger text-dark">
       <div class="card-header">
         <h2>Schedule via iCal</h2>
